K8s/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-5409-c1
  namespace: default
  labels:
    app: kubernetes-5409-c1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-5409-c1
  template:
    metadata:
      labels:
        app: kubernetes-5409-c1
    spec:
      containers:
        - name: kube-container1
          image: us-central1-docker.pkg.dev/b00932103-5409/kubernetes-5409/kubernetes_image1:latest
          ports:
            - containerPort: 6000
          volumeMounts:
            - name: my-volume
              mountPath: /app
#        - name: kube-container2
#          image: us-central1-docker.pkg.dev/b00932103-5409/kubernetes-5409/kubernetes_image2:latest
#          ports:
#            - containerPort: 6001
#          volumeMounts:
#            - name: my-volume
#              mountPath: /app
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: my-pvc

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: kubernetes-5409-c1-s1
#  labels:
#    app: "kubernetes-5409"
#spec:
#  selector:
#    app: "kubernetes-5409"
#  ports:
#    - protocol: TCP
#      port: 8080
#      targetPort: 6000
#    - protocol: TCP
#      port: 8081
#      targetPort: 6000
