K8s/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-5409-c2
  namespace: default
  labels:
    app: kubernetes-5409-c2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-5409-c2
  template:
    metadata:
      labels:
        app: kubernetes-5409-c2
    spec:
      containers:
        - name: kube-container2
          image: us-central1-docker.pkg.dev/b00932103-5409/kubernetes-5409/kubernetes_image2:latest
          ports:
            - containerPort: 6001
          volumeMounts:
            - name: my-volume
              mountPath: /app
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: my-pvc

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "kubernetes-5409-c2-service"
  namespace: "default"
  labels:
    app: "kubernetes-5409-c2"
spec:
  ports:
    - protocol: "TCP"
      port: 6001
      targetPort: 6001
  selector:
    app: "kubernetes-5409-c2"
  type: "ClusterIP"
