K8s/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  podSelector:
    matchLabels:
      app: kubernetes-5409
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
